#*******************************************************************************
# Copyright (C) 2013, Sierra Wireless Inc., all rights reserved.
#
# Contributors:
#     Sierra Wireless - initial API and implementation
#*******************************************************************************

add_subdirectory(sdirTool)
add_subdirectory(logTool)
add_subdirectory(installer)
add_subdirectory(config)
add_subdirectory(appCtrl)
add_subdirectory(inspect)
add_subdirectory(execInApp)
add_subdirectory(gdbCfg)
add_subdirectory(updateTool)
