#*******************************************************************************
# Copyright (C) Sierra Wireless Inc. Use of this work is subject to license.
#
# Contributors:
#     Sierra Wireless - initial API and implementation
#*******************************************************************************

add_subdirectory(sdirTool)
add_subdirectory(logTool)
add_subdirectory(installer)
add_subdirectory(config)
add_subdirectory(appCtrl)
add_subdirectory(inspect)
add_subdirectory(execInApp)
add_subdirectory(gdbCfg)
add_subdirectory(updateTool)
add_subdirectory(xattr)
